# OS

./: .gitignore  README.md
colloquium/: README.md
colloquium/colloquium/: colloquium.sln
colloquium/colloquium/colloquium/: Fibonacci.cpp  LinkedList.cpp  Palindrome.cpp  TestFibonacci.cpp  TestLinkedList.cpp  TestPalidrome.cpp  colloquium.cpp  colloquium.vcxproj  main.cpp
colloquium2/: README.md
colloquium2/singleton/: singleton.sln
colloquium2/singleton/singleton/: singleton.vcxproj  source.cpp
colloquium3/: README.md
fibonacci/: CMakeLists.txt
fibonacci/src/: CMakeLists.txt  Fibonacci.cpp  Fibonacci.h
lab1/EmployeeManager/: EmployeeManager.sln
lab1/EmployeeManager/Creator/: Creator.cpp  Creator.vcxproj
lab1/EmployeeManager/EmployeeManager/: EmployeeManager.cpp  EmployeeManager.vcxproj
lab1/EmployeeManager/Main/: Main.cpp  Main.vcxproj
lab1/EmployeeManager/Repoorter/: Repoorter.cpp  Repoorter.vcxproj
lab1/Lab1/: Lab1.sln
lab1/Lab1/Creator/: Creator.cpp  Creator.vcxproj  employee.h
lab1/Lab1/Main/: Main.cpp  Main.vcxproj  employee.h  epmloyee.h  newdata.txt  test.txt
lab1/Lab1/Reporter/: Reporter.cpp  Reporter.vcxproj
lab2/lab2/: lab2.sln
lab2/lab2/lab2/: lab2.vcxproj  main.cpp
lab3/lab3/: lab3.sln
lab3/lab3/lab3/: CMakeLists.txt  lab3.vcxproj  main.cpp
lab3/lab3/lab3/include/: marker_thread.h
lab3/lab3/lab3/src/: main.cpp
lab4/: CMakeLists.txt  receiver.cpp  sender.cpp  tests.cpp
lab5/: CMakeLists.txt
lab5/include/: employee.hpp
lab5/src/: client.cpp  server.cpp
lab5/tests/: CMakeLists.txt  test_employee.cpp
